[gd_scene load_steps=5 format=3 uid="uid://2gs8jiy7a6g5"]

[ext_resource type="Script" uid="uid://c3k14k4irxaio" path="res://Scripts/Other/Mobile/Mobile_new_load_game.gd" id="1_wuee4"]
[ext_resource type="Theme" uid="uid://shxikidpfmcj" path="res://Resources/Themes/Options_UI.tres" id="2_vvgvj"]
[ext_resource type="Texture2D" uid="uid://bcaxsl678pvdk" path="res://Sprites/Other/Mobile/Move.png" id="3_l3hxi"]
[ext_resource type="Texture2D" uid="uid://cqy2i7f0f8i0u" path="res://Sprites/Other/Mobile/Move_activated.png" id="4_b3akb"]

[node name="Mobile" type="Control"]
z_index = 135
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_wuee4")
metadata/_edit_use_anchors_ = true

[node name="Back" type="Button" parent="."]
z_index = 531
custom_minimum_size = Vector2(450, 128)
layout_mode = 0
offset_top = 952.0
offset_right = 450.0
offset_bottom = 1080.0
focus_mode = 0
theme = ExtResource("2_vvgvj")
shortcut_feedback = false
shortcut_in_tooltip = false
text = "Back"
flat = true

[node name="TouchScreenButtonRight" type="TouchScreenButton" parent="."]
position = Vector2(1536, 768)
scale = Vector2(4, 4)
texture_normal = ExtResource("3_l3hxi")
texture_pressed = ExtResource("4_b3akb")

[node name="TouchScreenButtonLeft" type="TouchScreenButton" parent="."]
position = Vector2(384, 768)
scale = Vector2(-4, 4)
texture_normal = ExtResource("3_l3hxi")
texture_pressed = ExtResource("4_b3akb")

[node name="Dimension" type="Control" parent="."]
visible = false
z_index = 535
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Button_main_universe" type="Button" parent="Dimension"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 0
offset_left = 640.0
offset_top = 640.0
offset_right = 896.0
offset_bottom = 896.0
focus_mode = 0
theme_override_font_sizes/font_size = 64
shortcut_feedback = false
shortcut_in_tooltip = false
text = "M"

[node name="Button_alternative_universe1" type="Button" parent="Dimension"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 0
offset_left = 1024.0
offset_top = 640.0
offset_right = 1280.0
offset_bottom = 896.0
focus_mode = 0
theme_override_font_sizes/font_size = 64
shortcut_feedback = false
shortcut_in_tooltip = false
text = "A1"

[node name="Description" type="Label" parent="Dimension"]
layout_mode = 0
offset_left = 256.0
offset_top = 312.0
offset_right = 1664.0
offset_bottom = 576.0
theme_override_font_sizes/font_size = 32
text = "legend_description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
clip_text = true

[node name="ColorRectDimension" type="ColorRect" parent="Dimension"]
z_index = -7
layout_mode = 0
offset_left = -2400.0
offset_top = 304.0
offset_right = 4680.0
offset_bottom = 1120.0
mouse_filter = 2
color = Color(0.0392157, 0.0392157, 0.0392157, 1)
metadata/_edit_lock_ = true

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="TouchScreenButtonRight" to="." method="_on_touch_screen_button_right_pressed"]
[connection signal="pressed" from="TouchScreenButtonLeft" to="." method="_on_touch_screen_button_left_pressed"]
[connection signal="pressed" from="Dimension/Button_main_universe" to="." method="_pressed_dimension_button" binds= [1]]
[connection signal="pressed" from="Dimension/Button_alternative_universe1" to="." method="_pressed_dimension_button" binds= [2]]
